--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,7 +1,77 @@
+body{
+  margin: 0;
+}
+
+:root {
+  --primary-color: #17a2b8;
+  --dark-color: #343a40;
+  --light-color: #f4f4f4;
+  --danger-color: #dc3545;
+  --success-color: #28a745;
+}
+
 /*Lading page*/
 .landing-page{
   margin: 0;
   padding: 0;
   width: 100%;
   height: 100%;
+}
+
+/*AppNavbar*/
+.link{
+  color: white;
+  text-decoration: none;
+}
+
+/*Dashboard*/
+.dashboard-big-wrapper{
+  display: flex;
+}
+
+/*Login page*/
+.text-link{
+  color: dodgerblue;
+  text-decoration: none;
+}
+
+/*Alert*/
+.alert {
+  padding: 0.8rem;
+  margin: 1rem 0;
+  opacity: 0.9;
+  background: var(--light-color);
+  color: #333;
+}
+
+.alert-primary {
+  background: var(--primary-color);
+  color: #fff;
+}
+
+.alert-light {
+  background: var(--light-color);
+  color: #333;
+}
+
+.alert-dark {
+  background: var(--dark-color);
+  color: #fff;
+}
+
+.alert-danger {
+  background: var(--danger-color);
+  color: #fff;
+}
+
+.alert-success {
+  background: var(--success-color);
+  color: #fff;
+}
+
+
+.alert-white {
+  background: #fff;
+  color: #333;
+  border: #ccc solid 1px;
 }
