--- a/client/src/index.css
+++ b/client/src/index.css
@@ -82,3 +82,62 @@ body{
   justify-content: center;
   align-items: center;
 }
+
+
+/*StockItem & Forex Item & Crypto Item*/
+.financial-instrument-container{
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap-reverse;
+  justify-content: center;
+  align-items: center;
+}
+
+.selected-container{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+/*MEDIA QUERIES*/
+@media screen and (min-width: 240px) and (max-width: 375px) {
+  .selected-container{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+  }
+}
+
+
+@media screen and (min-width: 375px) and (max-width: 568px) {
+  .selected-container{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+  }
+}
+
+@media screen and (min-width: 568px) and (max-width: 768px) {
+  .selected-container{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 992px) {
+  .selected-container{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+  }
+}
+
+@media screen and (min-width: 992px) and (max-width: 1200px) {
+
+}
