--- a/client/src/index.css
+++ b/client/src/index.css
@@ -84,6 +84,19 @@ body{
   align-items: center;
 }
 
+/*Search page*/
+.found-items-container{
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  align-items: flex-start;
+  justify-content: center;
+}
+
+.found-item-title{
+  font-size: 20px;
+  margin: 3px 0;
+}
 
 /*StockItem & Forex Item & Crypto Item*/
 .financial-instrument-container{
