--- a/client/src/index.css
+++ b/client/src/index.css
@@ -65,6 +65,10 @@ body{
   border: #ccc solid 1px;
 }
 
+.dashboard-alert{
+  margin-top: 5px;
+}
+
 /*Dashboard*/
 .dashboard-big-wrapper{
   display: flex;
@@ -107,6 +111,11 @@ body{
   align-items: center;
 }
 
+.full-name-container{
+  max-width: 250px;
+  overflow-wrap: break-word;
+}
+
 .selected-container{
   display: flex;
   flex-direction: column;
@@ -115,7 +124,7 @@ body{
 }
 
 /*Crypto Item*/
-.crypto-full-name-container{
+.forex-and-crypto-full-names-container{
   display: flex;
   flex-wrap: nowrap;
   flex-direction: column;
@@ -140,7 +149,7 @@ body{
     flex-wrap: wrap;
   }
 
-  .crypto-full-name-container{
+  .forex-and-crypto-full-names-container{
     display: flex;
     flex-wrap: nowrap;
     flex-direction: row;
@@ -178,7 +187,7 @@ body{
     flex-wrap: wrap;
   }
 
-  .crypto-full-name-container{
+  .forex-and-crypto-full-names-container{
     display: flex;
     flex-wrap: nowrap;
     flex-direction: row;
@@ -215,7 +224,7 @@ body{
     flex-wrap: wrap;
   }
 
-  .crypto-full-name-container{
+  .forex-and-crypto-full-names-container{
     display: flex;
     flex-wrap: nowrap;
     flex-direction: row;
@@ -252,7 +261,7 @@ body{
     flex-wrap: wrap;
   }
 
-  .crypto-full-name-container{
+  .forex-and-crypto-full-names-container{
     display: flex;
     flex-wrap: nowrap;
     flex-direction: row;
@@ -289,7 +298,7 @@ body{
     flex-wrap: wrap;
   }
 
-  .crypto-full-name-container{
+  .forex-and-crypto-full-names-container{
     display: flex;
     flex-wrap: nowrap;
     flex-direction: row;
@@ -338,7 +347,7 @@ body{
     flex-basis: 27%;
   }
 
-  .crypto-full-name-container{
+  .forex-and-crypto-full-names-container{
     display: flex;
     flex-wrap: nowrap;
     flex-direction: row;
