--- a/client/src/index.css
+++ b/client/src/index.css
@@ -88,6 +88,28 @@ body{
   align-items: center;
 }
 
+/*Initial page*/
+
+.initial-page-wrapper{
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.inital-page-div-text-container{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.inital-page-text-container{
+  text-align: center;
+  vertical-align: middle;
+}
+
 /*Search page*/
 .found-items-container{
   display: flex;
@@ -98,8 +120,20 @@ body{
 }
 
 .found-item-title{
-  font-size: 20px;
+  font-size: 25px;
+  font-weight: bold;
   margin: 3px 0;
+}
+
+.nothing-found-text{
+  margin-left: 30px;
+  color: rgba(89,89,89,0.65);
+  font-size: 22px;
+}
+
+.fin-list-item{
+  margin-left: 15px;
+  margin-top: 2px;
 }
 
 /*StockItem & Forex Item & Crypto Item*/
@@ -149,6 +183,11 @@ body{
     flex-wrap: wrap;
   }
 
+  .alert {
+    padding: 0.8rem;
+    margin: 2rem 0;
+  }
+
   .forex-and-crypto-full-names-container{
     display: flex;
     flex-wrap: nowrap;
@@ -185,6 +224,11 @@ body{
     justify-content: space-evenly;
     align-items: center;
     flex-wrap: wrap;
+  }
+
+  .alert {
+    padding: 0.8rem;
+    margin: 2rem 0;
   }
 
   .forex-and-crypto-full-names-container{
@@ -224,6 +268,11 @@ body{
     flex-wrap: wrap;
   }
 
+  .alert {
+    padding: 0.8rem;
+    margin: 2rem 0;
+  }
+
   .forex-and-crypto-full-names-container{
     display: flex;
     flex-wrap: nowrap;
@@ -259,6 +308,11 @@ body{
     justify-content: space-evenly;
     align-items: center;
     flex-wrap: wrap;
+  }
+
+  .alert {
+    padding: 0.8rem;
+    margin: 2rem 0;
   }
 
   .forex-and-crypto-full-names-container{
@@ -298,6 +352,11 @@ body{
     flex-wrap: wrap;
   }
 
+  .alert {
+    padding: 0.8rem;
+    margin: 2rem 0;
+  }
+
   .forex-and-crypto-full-names-container{
     display: flex;
     flex-wrap: nowrap;
@@ -333,6 +392,11 @@ body{
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
+  }
+
+  .alert {
+    padding: 0.8rem;
+    margin: 2rem 0;
   }
 
   .selected-container{
