--- a/client/src/index.css
+++ b/client/src/index.css
@@ -28,6 +28,19 @@ body{
   letter-spacing: 0.000938em;
 }
 
+.h5-section{
+  margin: 32px 0!important;
+  margin-top: 80px!important;
+  text-align: center;
+  color: inherit;
+}
+
+.more-section{
+  margin-top: 32px!important;
+  text-align: center;
+  color: inherit;
+}
+
 /*AppNavbar*/
 .link{
   color: white;
@@ -193,6 +206,10 @@ body{
     flex-wrap: wrap;
   }
 
+  .h5-section{
+    margin-top: 32px!important;
+  }
+
   .alert {
     padding: 0.8rem;
     margin: 2rem 0;
@@ -236,6 +253,10 @@ body{
     flex-wrap: wrap;
   }
 
+  .h5-section{
+    margin-top: 32px!important;
+  }
+
   .alert {
     padding: 0.8rem;
     margin: 2rem 0;
@@ -276,6 +297,10 @@ body{
     justify-content: space-evenly;
     align-items: center;
     flex-wrap: wrap;
+  }
+
+  .h5-section{
+    margin-top: 32px!important;
   }
 
   .alert {
